morse/style/base.css
/*
    This file is part of Morse.

    Morse is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    Morse is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with Morse.  If not, see <http://www.gnu.org/licenses/>.
*/

@font-face {
  font-family: 'Font Awesome';
  font-style: normal;
  font-weight: 400;
  src: url(/static/fontawesome-webfont.woff) format('woff');
}

.icon{
  font-family: 'Font Awesome' !important;
}

.icon-tooltip{
  font-size:30pt;
  color:#444;
}

.option{
  padding:5pt 5pt 5pt 5pt;
  background:#fff;
  padding:5pt;
  border-bottom:1pt solid #ccc;
  cursor:pointer;
}

    .option-selected{
      background:#41BFBD;
      border-color:#41BFBD;
    }

body {
  font-family:'Roboto';
  font-size:11pt;
  background:#ccc;
  height:100%;
}

input {
  font-family:'Roboto';
  padding:5pt;
  border:1pt solid #ccc;
  border-radius:3pt;
}

button {
  font: 12pt 'Roboto' !important;
  color:#fff;
  padding:5pt;
  border-radius:3pt;
  cursor:pointer;
  box-shadow:1px 1px #ddd;
  outline:none;
}

button::-moz-focus-inner {
  border: 0;
}

#body-wrapper{
  border-radius:3pt;
  padding:5pt;
  display:block;
  margin:auto;
  min-height:400pt;
  background:#f3f3f3;
  max-width:50em;
}

/* header -------------------------------------- */

header {
  background:#3D322E; 
  border-radius: 3pt 3pt 0pt 0pt;
  padding:5pt 5pt 5pt 5pt; 
  color:#fff !important;
  box-shadow:1px 1px #ddd;
}

    header a {
      color:#fff;
    }
    
    header a:visited {
      color:#fff;
    }

    #headertitle{
      float:left;
      text-shadow:1px 1px #333;
    }

        #community {
          font-size: 20pt;
          font-weight: 900;
        }


        #slogan {
          font-size: 12pt;
        }

/* --------------------------------------------- */




/* styling ----------------------------------- */

.fresh {
  background: #BDF067 !important;
}

.fresh:hover {
  background: #ADE057 !important;
}

.redoutline{
  border-color:#F08D37 !important;
}

input[type="checkbox"] {
    display:none;
}

input[type="checkbox"] + label span {
    font-size:10pt;
    display:inline-block;
    margin:-10px 10px 0 0;
    padding-left:25px;
    background:url(/static/checkbox.png) left top no-repeat;
    cursor:pointer;
}

input[type="checkbox"]:checked + label span {
    background:url(/static/checkbox.png) left -20px no-repeat;
}

